--- a/package.json
+++ b/package.json
@@ -1,25 +1,20 @@
 {
   "name": "lead-scraper-ui",
   "version": "1.0.0",
-  "description": "A desktop application for scraping leads.",
+  "description": "Lead scraper with UI",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": [
-    "automation",
-    "scraper",
-    "puppeteer"
-  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "nodemailer": "^6.6.3",
-    "puppeteer": "^10.4.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "nodemailer": "^6.9.13",
+    "puppeteer": "^19.0.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "socket.io": "^4.8.3"
+    "socket.io": "^4.7.5"
   }
 }
